@@ -2,6 +2,10 @@ OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.15 Engineering
 	Fixed invalid cookie in pagedResults control (ITS#3089)
+	Fixed libldap sasl_encode 64-bit bug (ITS#3054,3212)
+	Fixed libldap_r runqueue
+	Build environments
+		Added default ldapi:// SSF build setting
 
 OpenLDAP 2.2.14 Release
 	Fixed back-bdb ignore deadlock bug (ITS#3188)
@@ -29,7 +33,7 @@ OpenLDAP 2.2.12 Release
 	Fixed slapd first component bug (ITS#3118)
 	Fixed slapd TOLOWER macro use bug (ITS#3115)
 	Fixed slapd TLS context clash bug (ITS#3109)
-	Fixed slapd set acl recursion (ITS#3140)
+	Fixed slapd ACL set recursion (ITS#3140)
 	Fixed slapd entry2mods normalization bug (ITS#3144,3152)
 	Fixed slapd extended match memory leak (ITS#3146)
 	Fixed slapd syncrepl persist interval issue (ITS#3064)
